# optimization

lab2/: README.md
lab2/src/: constants.py  main.py
lab2/src/methods/: chord.py  golden_ratio.py  half_division.py  newton.py
lab3/: README.md
lab3/src/: derivatives.py  main.py  typing_.py
lab3/src/methods/: quadratic_approximation.py
lab4/: pyproject.toml
lab4/src/: constants.py  data.py  main.py  typing_.py
lab4/src/methods/: coordinate_based.py  fastest.py  gradient.py  method.py
lab4/src/methods/utils/: minimize1D.py
lab4/src/models/: function.py  result.py  vector.py
